fix removed overflow

--- a/static/style.css
+++ b/static/style.css
@@ -122,6 +122,4 @@ body {
     --color-2-violet: #d78fff;
     --color-2-pink: #ff8ba4;
     --color-2-blue: #4ec3fe;
-
-    overflow: hidden;
 }
